--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,19 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+
+# If we want we can introduce new actions as follows. but github has already introduced better ways for that
+#    - name: login to dockerhub
+#      run: cmd
+#
+#    - name: build a docker image
+#      run: cmd
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: dhanushkadocker/short-url-builder
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
