--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<version>2.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
