--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
 			<version>8.4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot3</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
+		<!-- Actuator is for health end point. So that resilience4 can understand -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+
 
 	</dependencies>
 
