--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
 
+#This property is for timing out the cache
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=2m
+
 server:
   port: 8081
 
