--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,10 +22,10 @@ spring:
 server:
   port: 8081
 
-random: 6
-#  url:
-#    id:
-#      length: 6
+length:
+  of:
+    random:
+      id: 8
 
 link:
   expires:
